<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiceMaster</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="feedbacktitle">DiceMaster</string>
    <string name="spinnertext">Pick the number of sides</string>
	<string name="feedbackbutton">Roll</string>
	<string name="numberOfDice">Number of Dice</string>
	<string name="numberOfDiceHint">Number of Dice</string>
	<string name="numberOfSides">Number of Sides</string>
	<string name="result">Result:</string>
	<string name="feedbacktype1">2</string>
	<string name="feedbacktype2">4</string>
	<string name="feedbacktype3">6</string>
	<string name="feedbacktype4">8</string>
	<string name="feedbacktype5">10</string>
	<string name="feedbacktype6">12</string>
	<string name="feedbacktype7">20</string>
	<string-array name="feedbacktypelist">
	    <item>@string/feedbacktype1</item>
	    <item>@string/feedbacktype2</item>
	    <item>@string/feedbacktype3</item>
	    <item>@string/feedbacktype4</item>
	    <item>@string/feedbacktype5</item>
	    <item>@string/feedbacktype6</item>
	    <item>@string/feedbacktype7</item>
	</string-array>
</resources>
