<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
	    android:id="@+id/TextViewTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/numberOfSides"
	    android:textSize="10pt"
	    >
	</TextView>
	<Spinner 
	    android:id="@+id/SpinnerFeedbackType"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:prompt="@string/spinnertext"
	    android:entries="@array/feedbacktypelist"
	    android:layout_below="@id/TextViewTitle"
	    >
	    <requestFocus />
	</Spinner>
	<TextView
	    android:id="@+id/NumberOfDice"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/numberOfDice"
	    android:textSize="10pt"
	    android:layout_below="@id/SpinnerFeedbackType">
	</TextView>
	<EditText 
	    android:id="@+id/ETNumberOfDice"
	    android:layout_height="wrap_content"
	    android:hint="@string/numberOfDiceHint"
	    android:inputType="number"
	    android:layout_width="match_parent"
	    android:layout_below="@id/NumberOfDice"
	    />
	<Button
	    android:id="@+id/ButtonSendFeedback"
	    android:layout_height="wrap_content"
	    android:text="@string/feedbackbutton"
	    android:onClick="diceRoll"
	    android:layout_width="match_parent"
	    android:layout_centerInParent="true"></Button>
	<TextView
	    android:id="@+id/Result"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/result"
	    android:textSize="50pt"
	    android:layout_below="@id/ButtonSendFeedback"
	    android:layout_centerInParent="true">
	</TextView>
    

</RelativeLayout>